compiler/testData/diagnostics/testsWithExplicitApi/inlineClasses.kt
// !DIAGNOSTICS: -EXPERIMENTAL_FEATURE_WARNING

inline class <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>Value1(<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>val inner: Int<!>)<!>
public inline class Value2(<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>val inner: Int<!>)
inline class <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>Value3(public val inner: Int)<!>
public inline class Value4(public val inner: Int)